--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,6 +4,10 @@ body {
 h1 {
   margin-top: 0px; }
 
+.error {
+  font-size: 10px;
+  color: red; }
+
 .container {
   width: 600px;
   margin: 0 auto;
